--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ h2{
 .container{
 	width: 50%;
 	background: black;
-	background-image: url(../img/wm.png);
+	background-image: url(../img/wm.jpg);
 	background-size: cover;
 	margin: 0 auto;
 	height: 600px;
